Fix overlap navbar #3

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,6 +4,7 @@
 	padding: 119px 68px 119px 68px;
 	width: 1600px;
 	height: 936px;
+	margin: 100px;
 }
 
 body {
@@ -25,7 +26,7 @@ body {
 	position: fixed; /* Set the navbar to fixed position */
 	top: 0; /* Position the navbar at the top of the page */
 	width: 100%; /* Full width */
-	margin-bottom:149px
+	margin-bottom:100px;
 }
 
 ul {
